@@ -1,3 +1,10 @@
+2007-05-20  Theodore Kilgore <kilgota@auburn.edu>
+	* library.c: Listing for Sakar Sticker Wizard no. 59379 added, found
+		     by Niklas Peinecke <n.peinecke@web.de>
+
+2007-05-12  Theodore Kilgore <kilgota@auburn.edu>
+	* library.c: Listing for Sakar clipshot no. 1169x added.
+
 2008-01-06  Theodore Kilgore <kilgota@auburn.edu>
 	* *.[c,h]:   The camera of Patrick Simmons is determined to be a 
 		     JL2005D. Support is introduced for distinguishing the 
